==== 1.7.0.2 ====

=== Fixes ===
Fixed: Security vulnerability in Zend_XmlRpc - http://framework.zend.com/security/advisory/ZF2012-01 
Fixed: PayPal Standard does not display on frontend during checkout with some merchant countries



==== 1.7.0.1 ====

=== Major Highlights ===
Improved the backend configuration UI for PayPal payment solutions

=== Improvements ===
Added the functionality for creating nested field sets in the System configuration
Implemented the support for the extended and shared configuration fields
Added the ability to define dependencies between fields from different field sets

=== Changes ===
Moved PayPal configuration to the Payment Methods menu
Set the default value of the cUrl VERIFYPEER option to TRUE for PayPal and added the ability to change this value
Changed the design and position of the configuration field tooltips

=== Fixes ===
Fixed: Inability of SOAP v2 API use in non WS-I compatible mode in the applications written in languages with strong typing
Fixed: In some cases comments history tab on order does not contain information about customer notifications
Fixed: Several potential security vulnerabilities



==== 1.7.0.0 ====

=== Major Highlights ===
Optimized Layered Navigation for pricing
Added CAPTCHA support for admin and customer users
Added different base price per customer group
Added auto generation of coupon codes
Improved the basic Backup and Rollback functionality
Added EU VAT ID validation service integration
Implemented DHL for Europe
Added REST API
Mobile theme was redesigned
Implemented the frontend Cookie Restriction functionality (EU cookie law compliance)
Added the Cash On Delivery and Bank Transfer payment methods

=== Improvements ===
XmlConnect package release v22.1
Upgraded TinyMCE to v3.4.7
Added the ability to translate action array parameter nodes in the layout.xml
Added the support for using custom currency symbols
Added the functionality for cleaning old cache files by cron tasks