@@ -32,3 +32,7 @@ zend.ze1_compatibility_mode = off
 ; and disables mcrypt if this line is missing in local php.ini
 
 extension=mcrypt.so
+
+; Disable PHP errors, notices and warnings output in production mode to prevent exposing sensitive information.
+
+display_errors = Off
